Fix invisible input text in light-theme views caused by white body color

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,10 @@
   #root {
     min-height: 100svh;
   }
+
+  input, select, textarea, option {
+    color: #111827;
+  }
 }
 
 @layer components {
